css/yearly.css
body {
   margin: 0; 
   padding: 1em;
   font-family: monospace;
   font-size: 12px;
   color: #999;
}

p {
    margin: 0 0 1.2em 0;
    max-width: 50em;
}

form {
    overflow: hidden;
}

form p {
    clear: both;
    margin: 0;
}

form .blah {
    float: left;
    display: inline;
    clear: none;
    margin: 0 16px 1.2em 0;
}

p a {
    color: #ff2863;
}

p a:visited {
    color: #FF84B4;
}

form {
    margin: 0 0 1.2em 0;
}

label {
    color: #333;
}

ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    width: 100%;
    line-height: 1;
    font-size: 12px;
    font-family: "Lucida Grande", sans-serif;
    color: #333;
}

li {
    margin: 0;
    padding: 0;
    width: 100%;
    position: relative;
    height: 20px;
}

.playcount {
    z-index: 2;
    position: absolute;
    left: 0.5em;
    top: 3px;
    text-align: right;
    width: 2.5em;
    color: #999;
}

.artist {
    z-index: 2;
    position: absolute;
    left: 3.5em;
    top: 0;
    padding: 3px 109px 0 0;
}

.artist img {
    position: absolute;
    right: 0;
    top: 0;
}

.chartbar {
    position: absolute;
    z-index: 1;
    height: 18px;
    background: #ddd;
    top: 0;
    left: 0;
    -moz-border-radius-topright: 9px;
    -moz-border-radius-bottomright: 9px;
    -webkit-border-top-right-radius: 9px;
    -webkit-border-bottom-right-radius: 9px;
}

.inBestOf {
    color: #ff2863;
    font-weight: bold;
}

